--- a/config_seed.yml
+++ b/config_seed.yml
@@ -3,7 +3,7 @@ osdeps_mode: all
 autoproj_use_prerelease: false
 reused_autoproj_installations: []
 prefix: install
-GITHUB: git
+GITHUB: http,ssh
 GITHUB_ROOT: https://github.com
 GITHUB_PUSH_ROOT: 'git@github.com:'
 DFKIGIT: http,ssh
